tests/tutorial/assets/vue/pages/errors/403/component.vue
<template>
    <h1 style="text-align: center;">Hello World</h1>
</template>

<script>
export default {
    name: 'Root',
    data() {
        return {

        }
    }
}
</script>
